<resources>
    <string name="app_name">Collector</string>


    <!-- navigation -->
    <string name="navigation_settings">Settings</string>
    <string name="navigation_games">Games</string>


    <!-- game list -->
    <string name="game_list_title">Games</string>
    <string name="game_list_game_image_content">Game Image</string>
    <string name="game_list_title_placeholder">Game Title</string>
    <string name="game_list_publisher_placeholder">Publisher</string>
    <string name="game_list_empty_list">No Games</string>
    <string name="game_list_add_new_game_button">Add new game</string>
    <string name="game_list_progress_text_placeholder">50 / 100</string>
    <string name="game_list_progress_text">%1$d / %2$d</string>
    <string name="game_list_progress_completed_text">completed!</string>



    <!-- item list -->
    <string name="item_list_title">Items</string>
    <string name="item_list_empty_list">No Items</string>
    <string name="item_list_add_new_item_button_content">Add new item</string>
    <string name="item_list_back_button_content">Back to game-list</string>

    <!-- item list options -->
    <string name="item_list_item_options_button_content">Options for the item-list</string>
    <string name="item_list_options_show_all_items">Show all items</string>
    <string name="item_list_options_only_show_not_obtained_items">Show only not obtained</string>
    <string name="item_list_options_only_show_obtained_items">Show only obtained</string>
    <string name="item_list_options_sort_alphabetically">Sort alphabetical</string>
    <string name="item_list_option_edit_game"><font fgcolor='#009000'>Edit Game</font></string>
    <string name="item_list_option_delete_game"><font fgcolor='#CC0000'>Delete Game</font></string>

    <!-- item details -->
    <string name="item_details_title">Details</string>
    <string name="item_details_scrollview_content">Item details</string>
    <string name="item_details_back_button_content">Back to item-list</string>

    <!-- item details options -->
    <string name="item_details_options_button_content">Options for the item</string>
    <string name="item_details_options_edit"><font fgcolor='#009000'>Edit</font></string>
    <string name="item_details_options_delete"><font fgcolor='#CC0000'>Delete</font></string>

    <!-- item -->
    <string name="item_image_content">Item Image</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_location_title">Location</string>
    <string name="item_location_placeholder">Item Location</string>
    <string name="item_description_title">Description</string>
    <string name="item_description_placeholder">Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description Item Description</string>
    <string name="item_prerequisites_title">Prerequisites</string>
    <string name="item_prerequisites_placeholder">Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites Item Prerequisites</string>

    <string name="item_not_obtained">not obtained</string>
    <string name="item_obtained">obtained</string>


    <!-- form game -->
    <string name="form_game_header_new_game">New Game</string>
    <string name="form_game_header_edit_game">Edit Game</string>
    <string name="form_game_title">Title</string>
    <string name="form_game_publisher">Publisher</string>
    <string name="form_game_image_content">Game Image</string>

    <!-- form item -->
    <string name="form_item_header_new_item">New Item</string>
    <string name="form_item_header_edit_item">Edit Item</string>
    <string name="form_item_name">Name</string>
    <string name="form_item_description">Description</string>
    <string name="form_item_prerequisites">Prerequisites</string>
    <string name="form_item_location">Location</string>

    <!-- form -->
    <string name="form_choose_picture">Choose Picture</string>
    <string name="form_button_save">Save</string>
    <string name="form_close_button_content">Close</string>


    <!-- settings -->
    <string name="fragment_settings_title">Settings</string>


    <!-- start -->
    <string name="start_screen_label">Start Screen</string>

</resources>