<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- game image preview -->
    <ImageView
        android:id="@+id/form_game_image_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:contentDescription="@string/form_game_image_content" />

    <!-- select game image button -->
    <Button
        android:id="@+id/form_game_button_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Theme.Collector.Button"
        android:text="@string/form_choose_picture" />

    <!-- game title -->
    <EditText
        android:id="@+id/form_game_edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        style="@style/Theme.Collector.Text.EditField"
        android:autofillHints="game title"
        android:hint="@string/form_game_title" />

    <!-- game publisher -->
    <EditText
        android:id="@+id/form_game_edit_text_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        style="@style/Theme.Collector.Text.EditField"
        android:autofillHints="game publisher"
        android:hint="@string/form_game_publisher" />

    <!-- save button -->
    <Button
        android:id="@+id/form_game_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        style="@style/Theme.Collector.Button"
        android:text="@string/form_button_save" />

</LinearLayout>