<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.pme.collector.view.fragments.items.ItemListFragment">

    <!-- back button -->
    <Button
        android:id="@+id/item_list_back_button"
        android:layout_width="56dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/item_list_header"
        android:layout_alignBottom="@id/item_list_header"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/item_list_back_button_content"
        android:drawableEnd="@drawable/back_arrow"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <!-- item list header -->
    <TextView
        android:id="@+id/item_list_header"
        style="@style/Theme.Collector.Text.Header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/item_list_options_button"
        android:layout_toEndOf="@id/item_list_back_button"
        android:text="@string/item_list_title" />

    <!-- item list options button -->
    <Button
        android:id="@+id/item_list_options_button"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/item_list_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/item_list_item_options_button_content"
        android:drawableEnd="@drawable/options_icon" />

    <!-- items recycler view -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_list_header" />

    <!-- add new item button -->
    <Button
        android:id="@+id/item_list_add_new_item_button"
        style="@style/Theme.Collector.Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginBottom="75dp"
        android:background="@drawable/add_icon"
        android:contentDescription="@string/item_list_add_new_item_button_content" />

</RelativeLayout>